from Caracter import *
class CaracterGrafico(Caracter):
    pass