ALTO=1200
ANCHO=720




class InterfazGrafica:
    pass